# Racing_Car_GUI

./: README.md
TCP_Client/: CMakeLists.txt  main.cpp  main.qml  tcp_client.cpp  tcp_client.h
TCP_Server/: CMakeLists.txt  Gear_Number.qml  Progress_Bar.qml  Progress_Bar2.qml  Progress_Bar3.qml  Progress_Bar4.qml  Progress_Bar5.qml  README.md  Speed_Button.qml  Speed_Number.qml  main.cpp  main.qml  tcp.cpp  tcp.h
